<resources>
    <string name="app_name">Baking App</string>

    <!--Recipe Collection-->
    <string name="servings">Servings:</string>

    <!--Recipe Details-->
    <string name="ingredients">Ingredients</string>

    <!--Step Details-->
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="appwidget_text">EXAMPLE</string>

    <!--Widget-->
    <string name="add_widget">Add widget</string>
    <string name="widget_is_empty">There are no recipes loaded yet. Please start the App first.</string>

</resources>
