...
                android:visibility="gone"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
